Name: servant-reflex
Version: 0.3
Synopsis: Servant reflex API generator
Description: Servant reflex API generator
License: AllRightsReserved
License-file: LICENSE.md
Author: Greg Hale, Doug Beardsley
Maintainer: imalsogreg@gmail.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.10

Flag Example
  description: Enable example
  default: False

library
  exposed-modules:
    Servant.Reflex
    Servant.Reflex.Multi

  other-modules:
    Servant.Common.BaseUrl
    Servant.Common.Req

  hs-source-dirs: src
  build-depends:
    base                >= 4.8  && < 4.10,
    aeson               >= 0.11.2 && < 0.12,
    attoparsec          >= 0.13   && < 0.14,
    bytestring          >= 0.10 && < 0.11,
    case-insensitive    >= 1.2.0.4 && < 1.3,
    containers          >= 0.5.6   && < 0.6,
    data-default        >= 0.5  && < 0.8,
    exceptions          >= 0.8  && < 0.9,
    ghcjs-dom           >= 0.2  && < 0.8,
    http-api-data       >= 0.2  && < 0.4,
    http-media          >= 0.6  && < 0.7,
    mtl                 >= 2.2.1 && < 2.3,
    network-uri         >= 2.6  && < 2.7,
    reflex              >= 0.5  && < 0.6,
    reflex-dom          == 0.4  && < 0.5,
    safe                >= 0.3.9 && < 0.4,
    servant             >= 0.7  && < 0.11,
    string-conversions  >= 0.4  && < 0.5,
    text                >= 1.2  && < 1.3,
    transformers        >= 0.4  && < 0.6

  if impl(ghcjs)
    build-depends:
                  ghcjs-base           >= 0.2  && < 0.3,
                  scientific           >= 0.3  && < 0.4,
                  unordered-containers >= 0.2  && < 0.3,
                  vector               >= 0.11 && < 0.13

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2

  default-language: Haskell2010

executable example
  if flag(Example)
    buildable: True
  else
    buildable: False
  build-depends: aeson, reflex, servant-reflex, base, scientific, servant, reflex-dom, text
  default-language: Haskell2010
  main-is: Example.hs
  other-modules: API
  hs-source-dirs: exec
