Name: servant-reflex
Version: 0.3.5
Synopsis: servant API generator for reflex apps
Description: Generate reflex-compatible client functions from servant API descriptions
License: BSD3
License-file: LICENSE.md
Author: Greg Hale, Doug Beardsley
Maintainer: imalsogreg@gmail.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.10

Flag Example
  description: Enable example
  default: False

library
  exposed-modules:
    Servant.Common.BaseUrl
    Servant.Common.Req
    Servant.Reflex
    Servant.Reflex.Multi

  hs-source-dirs: src
  build-depends:
    base                >= 4.8  && < 5,
    bytestring          >= 0.10 && < 0.11,
    case-insensitive    >= 1.2.0.4 && < 1.3,
    containers          >= 0.5.6   && < 0.7,
    data-default        >= 0.5  && < 0.8,
    exceptions          >= 0.8  && < 0.11,
    ghcjs-dom           >= 0.2  && < 0.10,
    http-api-data       >= 0.3.6 && < 0.5,
    http-media          >= 0.6  && < 0.9,
    jsaddle             >= 0.8  && < 0.10,
    mtl                 >= 2.2.1 && < 2.3,
    network-uri         >= 2.6  && < 2.7,
    reflex              >= 0.5  && < 0.8,
    reflex-dom-core     >= 0.6  && < 0.7,
    safe                >= 0.3.9 && < 0.4,
    servant             >= 0.16  && < 0.18,
    servant-auth        >= 0.2.1 && < 0.4,
    string-conversions  >= 0.4  && < 0.5,
    text                >= 1.2  && < 1.3,
    transformers        >= 0.4  && < 0.6

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

  default-language: Haskell2010

executable example
  if flag(Example)
    buildable: True
  else
    buildable: False
  build-depends:
    aeson,
    reflex,
    servant-reflex,
    base,
    scientific,
    servant,
    reflex-dom-core,
    text
  default-language: Haskell2010
  main-is: Example.hs
  other-modules: API
  hs-source-dirs: exec
